--- a/android-app/app/src/main/AndroidManifest.xml
+++ b/android-app/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".InitActivity"> </activity>
+        <activity android:name=".InitActivity" />
+        <activity android:name=".LoginActivity"/>
     </application>
 
 </manifest>
