--- a/android-app/app/src/main/AndroidManifest.xml
+++ b/android-app/app/src/main/AndroidManifest.xml
@@ -3,7 +3,6 @@
     package="com.example.app.tuego">
 
     <uses-permission android:name="android.permission.INTERNET" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -22,6 +21,7 @@
         <activity android:name=".ForgotPasswordActivity"/>
         <activity android:name=".ChangePasswordActivity"/>
         <activity android:name=".InboxActivity"/>
+        <activity android:name=".InboxItemActivity"/>
     </application>
 
 </manifest>
