--- a/android-app/app/src/main/AndroidManifest.xml
+++ b/android-app/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/appName"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
@@ -22,6 +22,8 @@
         <activity android:name=".ChangePasswordActivity"/>
         <activity android:name=".InboxActivity"/>
         <activity android:name=".InboxItemActivity"/>
+        <activity android:name=".LeaderboardActivity"/>
+        <activity android:name=".PostPictureActivity"/>
     </application>
 
 </manifest>
