--- a/android-app/app/src/main/AndroidManifest.xml
+++ b/android-app/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.app.tuego">
+    package="nl.tue.tuego">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application
@@ -11,21 +11,21 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".LoadActivity"
+            android:name="nl.tue.tuego.LoadActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity"/>
-        <activity android:name=".LoginActivity"/>
-        <activity android:name=".ForgotPasswordActivity"/>
-        <activity android:name=".ChangePasswordActivity"/>
-        <activity android:name=".InboxActivity"/>
-        <activity android:name=".InboxItemActivity"/>
-        <activity android:name=".LeaderboardActivity"/>
-        <activity android:name=".PostPictureActivity"/>
+        <activity android:name="nl.tue.tuego.RegisterActivity"/>
+        <activity android:name="nl.tue.tuego.LoginActivity"/>
+        <activity android:name="nl.tue.tuego.ForgotPasswordActivity"/>
+        <activity android:name="nl.tue.tuego.ChangePasswordActivity"/>
+        <activity android:name="nl.tue.tuego.InboxActivity"/>
+        <activity android:name="nl.tue.tuego.InboxItemActivity"/>
+        <activity android:name="nl.tue.tuego.LeaderboardActivity"/>
+        <activity android:name="nl.tue.tuego.PostPictureActivity"/>
     </application>
 
 </manifest>
