--- a/android-app/app/src/main/AndroidManifest.xml
+++ b/android-app/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
@@ -11,10 +12,10 @@
         android:required="true" />
     <application
         android:allowBackup="true"
-        android:supportsRtl="true"
+        android:icon="@drawable/tuego"
         android:label="@string/appName"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-        android:icon="@drawable/tuego">
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -23,8 +24,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths">
-            </meta-data>
+                android:resource="@xml/file_paths" />
         </provider>
 
         <activity android:name=".LoadActivity">
