Created new model and fixed a bug where the user would go back to the loginactivity after posting.

--- a/android-app/app/src/main/AndroidManifest.xml
+++ b/android-app/app/src/main/AndroidManifest.xml
@@ -41,7 +41,12 @@
 
         <activity
             android:name=".Activities.LoginActivity"
-            android:label="@string/loginTitle" />
+            android:label="@string/loginTitle"
+            android:parentActivityName=".Activities.RegisterActivity" >
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".Activities.RegisterActivity" />
+        </activity>
 
         <activity
             android:name=".Activities.ForgotPasswordActivity"
