--- a/android-app/app/src/main/AndroidManifest.xml
+++ b/android-app/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".Activities.LoadActivity">
+        <activity android:name="nl.tue.tuego.Activities.LoadActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -36,47 +36,71 @@
         </activity>
 
         <activity
-            android:name=".Activities.RegisterActivity"
+            android:name="nl.tue.tuego.Activities.RegisterActivity"
             android:label="@string/registerTitle" />
 
         <activity
-            android:name=".Activities.LoginActivity"
+            android:name="nl.tue.tuego.Activities.LoginActivity"
             android:label="@string/loginTitle"
-            android:parentActivityName=".Activities.RegisterActivity" >
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".Activities.RegisterActivity" />
+            android:parentActivityName="nl.tue.tuego.Activities.RegisterActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.tue.tuego.Activities.RegisterActivity" />
         </activity>
 
         <activity
-            android:name=".Activities.ForgotPasswordActivity"
-            android:label="@string/forgotPasswordTitle" />
+            android:name="nl.tue.tuego.Activities.ForgotPasswordActivity"
+            android:label="@string/forgotPasswordTitle"
+            android:parentActivityName="nl.tue.tuego.Activities.LoginActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.tue.tuego.Activities.LoginActivity" />
+        </activity>
 
         <activity
-            android:name=".Activities.ChangePasswordActivity"
-            android:label="@string/changePasswordTitle" />
+            android:name="nl.tue.tuego.Activities.ChangePasswordActivity"
+            android:label="@string/changePasswordTitle"
+            android:parentActivityName="nl.tue.tuego.Activities.ForgotPasswordActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.tue.tuego.Activities.ForgotPasswordActivity" />
+        </activity>
 
         <activity
-            android:name=".Activities.InboxActivity"
-            android:label="@string/inboxTitle" />
+            android:name="nl.tue.tuego.Activities.InboxActivity"
+            android:label="@string/inboxTitle"
+            android:parentActivityName="nl.tue.tuego.Activities.LoginActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.tue.tuego.Activities.LoginActivity" />
+        </activity>
 
         <activity
-            android:name=".Activities.InboxItemActivity"
-            android:label="@string/inboxItemTitle" />
+            android:name="nl.tue.tuego.Activities.InboxItemActivity"
+            android:label="@string/inboxItemTitle"
+            android:parentActivityName="nl.tue.tuego.Activities.InboxActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.tue.tuego.Activities.InboxActivity" />
+        </activity>
 
         <activity
-            android:name=".Activities.LeaderboardActivity"
-            android:label="@string/leaderboardTitle" />
+            android:name="nl.tue.tuego.Activities.LeaderboardActivity"
+            android:label="@string/leaderboardTitle"
+            android:parentActivityName="nl.tue.tuego.Activities.InboxActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.tue.tuego.Activities.InboxActivity" />
+        </activity>
 
         <activity
-            android:name=".Activities.PostPictureActivity"
-            android:label="@string/postPictureTitle" />
-
-        <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
-     App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+            android:name="nl.tue.tuego.Activities.PostPictureActivity"
+            android:label="@string/postPictureTitle"
+            android:parentActivityName="nl.tue.tuego.Activities.InboxActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="nl.tue.tuego.Activities.InboxActivity" />
+        </activity>
     </application>
 
 </manifest>
